--- a/manager/src/main/resources/static/pages/GroupFormatConfig.html
+++ b/manager/src/main/resources/static/pages/GroupFormatConfig.html
@@ -17,11 +17,11 @@
             layer.open({
                 type: 2,
                 area: ['500px', '600px'],
-                content: 'formatIframe.html',
+                content: 'formatIframe.html' ,
                 success: function (layero, index) {
                     var body = layer.getChildFrame('body', index);
                     var iframeWin = window[layero.find('iframe')[0]['name']]; //得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
-                    console.log(body.html()) //得到iframe页的body内容
+                    console.log(body.html()); //得到iframe页的body内容
                     body.find('input[name = "ddname"]').val('')
                 }
             });
