--- a/manager/src/main/resources/static/pages/gamesList.html
+++ b/manager/src/main/resources/static/pages/gamesList.html
@@ -22,9 +22,15 @@
                 <div class="layui-form layui-card-header layuiadmin-card-header-auto">
                     <form class="layui-form-item" id="search-form">
                         <div class="layui-inline">
-                            <label class="layui-form-label">时间范围</label>
-                            <div class="layui-input-inline">
-                                <input type="text" class="layui-input" id="times" placeholder=" - ">
+                            <label class="layui-form-label">游戏代号</label>
+                            <div class="layui-input-inline" style="width: 6rem;">
+                                <input type="text" class="layui-input" id="gameId" name="gameId">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">游戏名称</label>
+                            <div class="layui-input-inline" style="width: 6rem;">
+                                <input type="text" class="layui-input" id="gameName" name="gameName">
                             </div>
                         </div>
                         <div class="layui-inline">
